tree-sitter-eqideo/corpus/03.txt
=========
Test 3
=========

$$
x(x+1) = 0
$$

---

(source_file
      (eqtex
        (eqtex_equations
          (eqtex_product
            (eqtex_symbol
              (eqtex_text))
            (eqtex_brackets
              (eqtex_sum
                (eqtex_symbol
                  (eqtex_text))
                (eqtex_symbol
                  (eqtex_number)))))
          (eqtex_symbol
            (eqtex_number)))))
