tree-sitter-eqideo/corpus/04.txt
=========
Test 4
=========

$$-x + c$$

---

(source_file
      (eqtex
        (eqtex_sum
          (eqtex_opposite
            (eqtex_symbol
              (eqtex_text)))
          (eqtex_symbol
            (eqtex_text)))))
